--- a/RPA.KnowledgebaseSync/RPA.KnowledgebaseSync.Activities/Properties/Resources.resx
+++ b/RPA.KnowledgebaseSync/RPA.KnowledgebaseSync.Activities/Properties/Resources.resx
@@ -149,10 +149,6 @@
     <value>Authentication</value>
     <comment>category</comment>
   </data>
-  <data name="Common_Category" xml:space="preserve">
-    <value>Common</value>
-    <comment>category</comment>
-  </data>
   <data name="Input_Category" xml:space="preserve">
     <value>Input</value>
     <comment>category</comment>
@@ -197,8 +193,124 @@
     <value>The Portal ID</value>
     <comment>property description</comment>
   </data>
+  <data name="KnowledgebaseSync_DisplayName" xml:space="preserve">
+    <value>KnowledgebaseSync</value>
+    <comment>activity name</comment>
+  </data>
+  <data name="KnowledgebaseSync_Description" xml:space="preserve">
+    <value>Sync Portal data to QnA Knowledgebase</value>
+    <comment>activity description</comment>
+  </data>
+  <data name="KnowledgebaseSync_PortalDB_DisplayName" xml:space="preserve">
+    <value>PortalDB</value>
+    <comment>property name</comment>
+  </data>
+  <data name="KnowledgebaseSync_PortalDB_Description" xml:space="preserve">
+    <value>Portal DataTable</value>
+    <comment>property description</comment>
+  </data>
+  <data name="KnowledgebaseSync_Knowledgebase_DisplayName" xml:space="preserve">
+    <value>Knowledgebase</value>
+    <comment>property name</comment>
+  </data>
+  <data name="KnowledgebaseSync_Knowledgebase_Description" xml:space="preserve">
+    <value>QnA Knowledgebase JsonObject</value>
+    <comment>property description</comment>
+  </data>
+  <data name="KnowledgebaseSync_UpdateKbOperation_DisplayName" xml:space="preserve">
+    <value>UpdateKbOperation</value>
+    <comment>property name</comment>
+  </data>
+  <data name="KnowledgebaseSync_UpdateKbOperation_Description" xml:space="preserve">
+    <value>QnA Knowledgebase Update JsonObject</value>
+    <comment>property description</comment>
+  </data>
+  <data name="KnowledgebaseSync_JsonObjectUpdateKbOperationDTO_DisplayName" xml:space="preserve">
+    <value>JsonObjectUpdateKbOperationDTO</value>
+    <comment>property name</comment>
+  </data>
+  <data name="KnowledgebaseSync_JsonObjectUpdateKbOperationDTO_Description" xml:space="preserve">
+    <value>QnA Knowledgebase Update JsonObject</value>
+    <comment>property description</comment>
+  </data>
+  <data name="Authentication_Category" xml:space="preserve">
+    <value>Authentication</value>
+    <comment>category</comment>
+  </data>
+  <data name="Common_Category" xml:space="preserve">
+    <value>Common</value>
+    <comment>category</comment>
+  </data>
   <data name="Input_Category" xml:space="preserve">
     <value>Input</value>
+    <comment>category</comment>
+  </data>
+  <data name="Output_Category" xml:space="preserve">
+    <value>Output</value>
+    <comment>category</comment>
+  </data>
+  <data name="Options_Category" xml:space="preserve">
+    <value>Options</value>
+    <comment>category</comment>
+  </data>
+  <data name="ValidationScope_Error" xml:space="preserve">
+    <value>Cannot be used outside of a {0}.</value>
+    <comment>error message; {0} is a container activity (e.g. a scope)</comment>
+  </data>
+  <data name="ValidationValue_Error" xml:space="preserve">
+    <value>Please provide a value for {0}.</value>
+    <comment>error message; {0} is the name of a missing property</comment>
+  </data>
+  <data name="ValidationExclusiveProperties_Error" xml:space="preserve">
+    <value>Please provide a value either for {0} or {1}, but not both.</value>
+    <comment>error message; {0} &amp; {1} are mutually exclusive activities</comment>
+  </data>
+  <data name="ValidationOverloadGroup_Error" xml:space="preserve">
+    <value>Please provide values for both {0} and {1}.</value>
+    <comment>error message; {0} &amp; {1} are complementary properties</comment>
+  </data>
+  <data name="SyncKnowledgebase_DisplayName" xml:space="preserve">
+    <value>SyncKnowledgebase</value>
+    <comment>activity name</comment>
+  </data>
+  <data name="SyncKnowledgebase_Description" xml:space="preserve">
+    <value>Sync Portal data to QnA Knowledgebase</value>
+    <comment>activity description</comment>
+  </data>
+  <data name="SyncKnowledgebase_PortalDT_DisplayName" xml:space="preserve">
+    <value>PortalDT</value>
+    <comment>property name</comment>
+  </data>
+  <data name="SyncKnowledgebase_PortalDT_Description" xml:space="preserve">
+    <value>Portal DataTable</value>
+    <comment>property description</comment>
+  </data>
+  <data name="Input_Category" xml:space="preserve">
+    <value>Input</value>
+    <comment>category</comment>
+  </data>
+  <data name="SyncKnowledgebase_Knowledgebase_DisplayName" xml:space="preserve">
+    <value>Knowledgebase</value>
+    <comment>property name</comment>
+  </data>
+  <data name="SyncKnowledgebase_Knowledgebase_Description" xml:space="preserve">
+    <value>QnA Knowledgebase JsonObject</value>
+    <comment>property description</comment>
+  </data>
+  <data name="Input_Category" xml:space="preserve">
+    <value>Input</value>
+    <comment>category</comment>
+  </data>
+  <data name="SyncKnowledgebase_UpdateKbOperation_DisplayName" xml:space="preserve">
+    <value>UpdateKbOperation</value>
+    <comment>property name</comment>
+  </data>
+  <data name="SyncKnowledgebase_UpdateKbOperation_Description" xml:space="preserve">
+    <value>QnA Knowledgebase Update JsonObject</value>
+    <comment>property description</comment>
+  </data>
+  <data name="Output_Category" xml:space="preserve">
+    <value>Output</value>
     <comment>category</comment>
   </data>
 </root>
